text-align issues fixed

--- a/public/stylesheets/helpers.css
+++ b/public/stylesheets/helpers.css
@@ -28,6 +28,12 @@
 	margin: 0 0 2rem 0;
 }
 
+@media (max-width: 768px) {
+	.sub-intro {
+	    text-align: center;
+	}
+}
+
 .form-name-text {
 	letter-spacing: 0;
 	margin: 0 0 0.5rem 0;
